# claude-session-monitor

./: .gitignore  CLAUDE.md  LICENSE  README.md  claude_monitor.py  pyproject.toml
spec/: publikacja-claude-session-monitor.md
